# satnogs-id

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: mirror.yml
notebooks/m0/: Dockerfile.strf  batch_diag.py  batch_run.py  diag_correction.py  eval_run.py  gather_eval_set.py  get_batch_catalogs.py  make_dat.py  matched_filter.py  patch_rffit.py  separability.py  validate_geometry.py  viz_good.py
satnogs_id/data/: build.py
satnogs_id/id/: nametag.py
satnogs_id/service/: app.py  forward.py
satnogs_id/shared/: geometry.py  waterfall.py
scripts/: patch_rffit.py
